# autonomous-rc-car

./: .gitignore  CLAUDE.md  CONTROLS.md  HARDWARE_NOTES.md  README.md  actuator.py  camera.py  config.py  datastore.py  main.py  manage.py  pyproject.toml  test_triggers.py  test_web.py  vehicle.py
notes/: CONTROLS.md  DATA_COLLECTION.md  experiments.md  training.md
scripts/: read_i2c_registers.py  scan_all_i2c.py  test_controller.py  test_motor_bruteforce.py  test_motor_cmd_bytes.py  test_motor_gpio.py  test_motor_gpio_correct.py  test_motor_init.py  test_motor_protocol.py  test_motor_pwm_pins.py  test_motor_registers.py  test_servo_release.py
src/car/: actuator.py  config.py  controller.py  datastore.py  filters.py  stream.py  vehicle.py
src/car/web/: __init__.py  web.py
src/car/web/templates/: base.html
src/static/: index.html  style.css
src/training/: dataset.py  pilotnet.py  ppo_pilotnet.py  train.py
web_controller/: web.py
web_controller/templates/: vehicle.html
web_controller/templates/static/: main.js
