[project]
name = "autonomous-rc-car"
version = "0.1.0"
description = "Self driving RC car"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "adafruit-blinka>=8.69.0",
  "adafruit-circuitpython-pca9685>=3.4.20",
  "evdev>=1.9.3",
  "gym-donkeycar",
  "gymnasium>=1.3.0",
  "matplotlib>=3.10.8",
  "numpy>=2.0.0",
  "opencv-python>=4.13.0.92",
  "pillow>=12.1.0",
  "setuptools<80",
  "smbus2>=0.5.0",
  "tensorboard>=2.20.0",
  "torch",
  "torchvision",
  "tqdm>=4.67.3",
  "tyro>=1.0.13",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
gym-donkeycar = { path = "../gym-donkeycar", editable = true }

[project.scripts]
drive = "main:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv]
index-strategy = "unsafe-best-match"
